--- a/index.html
+++ b/index.html
@@ -41,22 +41,22 @@
       <div class="main">
         <div class="input">
           <label for="surname">Фамилия</label>
-          <input type="text" id="surname" placeholder="Иванов">
+          <input type="text" id="surname" name="info" placeholder="Иванов">
         </div>
   
         <div class="input">
           <label for="name">Имя</label>
-          <input type="text" id="name" placeholder="Иван">
+          <input type="text" id="name" name="info" placeholder="Иван">
         </div>
   
         <div class="input">
           <label for="middle-name">Отчество</label>
-          <input type="text" id="middle-name" placeholder="Иванович">
+          <input type="text" id="middle-name" name="info" placeholder="Иванович">
         </div>
   
         <div class="input">
           <label for="email">email</label>
-          <input type="email" id="email" placeholder="mail@mail.ru">
+          <input type="email" id="email" name="info" placeholder="mail@mail.ru">
         </div>
       </div>
 
@@ -67,10 +67,10 @@
       <legend>Пол</legend>
 
       <div>
-        <input type="radio" id="man">
+        <input type="radio" name="sex" id="man">
         <label for="man">М</label>
 
-        <input type="radio" id="woman">
+        <input type="radio" name="sex" id="woman">
         <label for="woman">Ж</label>
       </div>
 
@@ -80,24 +80,24 @@
       <legend>Хобби</legend>
 
       <div>
-        <input type="checkbox" id="drawing">
+        <input type="checkbox" name="hobby" id="drawing">
         <label for="drawing">Рисование</label>
 
-        <input type="checkbox" id="reading">
+        <input type="checkbox" name="hobby" id="reading">
         <label for="reading">Чтение</label>
 
-        <input type="checkbox" id="knitting">
+        <input type="checkbox" name="hobby" id="knitting">
         <label for="knitting">Вязание</label>
 
-        <input type="checkbox" id="cooking">
+        <input type="checkbox" name="hobby" id="cooking">
         <label for="cooking">Кулинария</label>
       </div>
 
     </fieldset>
 
     <div>
-      <input type="submit" value="Отправить">
-      <input type="reset" name="" id="" value="Очистить">
+      <input type="submit" name="submit id="submit-btn" value="Отправить">
+      <input type="reset" name="reset" id="reset" value="Очистить">
     </div>
 
   </form>
